[project]
name = "landscape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Joe Halliwell", email = "joe.halliwell@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.4.3",
]

[project.scripts]
landscape = "landscape.main:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
