[project]
name = "landscape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Joe Halliwell", email = "joe.halliwell@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.4.3",
    "loguru>=0.7.3",
]

[project.scripts]
landscape = "landscape.main:app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
