[project]
name = "landscape"
version = "0.1.0"
description = "A landscape generator for the terminal"
readme = "README.md"
authors = [{ name = "Joe Halliwell", email = "joe.halliwell@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["cyclopts>=4.4.3", "loguru>=0.7.3"]

[project.scripts]
landscape = "landscape.main:app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-coverage>=0.0", "ruff>=0.14.10"]

[tool.ruff]
line-length = 88
